--- a/usuarios/package.json
+++ b/usuarios/package.json
@@ -20,7 +20,8 @@
     "express": "^4.18.2",
     "express-validator": "^7.0.1",
     "jsonwebtoken": "^9.0.0",
-    "mongoose": "^7.2.1"
+    "mongoose": "^7.2.1",
+    "node-rsa": "^1.1.1"
   },
   "devDependencies": {
     "nodemon": "^2.0.22"
